# brunel

./: .gitignore  README.md  main.py  pyproject.toml
src/brunel/: cli.py
src/brunel/agents/: errors.py  loader.py  runner.py  specs.py
src/brunel/app/: config.py  discovery.py  paths.py  registries.py
src/brunel/builtins/agents/default/: agent.yaml
src/brunel/builtins/skills/example/: SKILL.md
src/brunel/core/: dirs.py  discovery.py  platform.py
src/brunel/tui/: app.py
tests/: test_cli.py  test_discovery.py  test_loader.py  test_runner.py
